Wed Nov 17 17:46:44 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Hello/Receiver/Receiver.idl:
        
          Added 'uses multiple' receptacle to test code generation
          and compilation.

Sat Nov 13 18:04:36 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Hello/Hello_Base/Hello_Base.idl:
        * DAnCE/examples/Hello/Hello_Base/Hello_Base.mpc:
        * DAnCE/examples/Hello/Hello_Base/Hello_Base_stub_export.h:
        * DAnCE/examples/Hello/Hello_Base/Hello_Base_svnt_export.h:
        * DAnCE/examples/Hello/Receiver/Receiver.cidl:
        * DAnCE/examples/Hello/Receiver/Receiver.idl:
        * DAnCE/examples/Hello/Receiver/Receiver.mpc:
        * DAnCE/examples/Hello/Receiver/Receiver_exec.cpp:
        * DAnCE/examples/Hello/Receiver/Receiver_exec.h:
        * DAnCE/examples/Hello/Receiver/Receiver_exec_export.h:
        * DAnCE/examples/Hello/Receiver/Receiver_stub_export.h:
        * DAnCE/examples/Hello/Receiver/Receiver_svnt_export.h:
        * DAnCE/examples/Hello/Sender/Sender.cidl:
        * DAnCE/examples/Hello/Sender/Sender.idl:
        * DAnCE/examples/Hello/Sender/Sender.mpc:
        * DAnCE/examples/Hello/Sender/Sender_exec.cpp:
        * DAnCE/examples/Hello/Sender/Sender_exec.h:
        * DAnCE/examples/Hello/Sender/Sender_exec_export.h:
        * DAnCE/examples/Hello/Sender/Sender_stub_export.h:
        * DAnCE/examples/Hello/Sender/Sender_svnt_export.h:
        * DAnCE/examples/Hello/Sender/starter.cpp:
        * DAnCE/examples/Hello/descriptors/Deployment.xsd:
        * DAnCE/examples/Hello/descriptors/Domain.cdd:
        * DAnCE/examples/Hello/descriptors/Hello.cdp:
        * DAnCE/examples/Hello/descriptors/Hello.cid:
        * DAnCE/examples/Hello/descriptors/Hello.cpd:
        * DAnCE/examples/Hello/descriptors/Hello.pcd:
        * DAnCE/examples/Hello/descriptors/Libraries.iad:
        * DAnCE/examples/Hello/descriptors/Receiver.ccd:
        * DAnCE/examples/Hello/descriptors/Receiver.cid: